tests/snapshots/minimal/tests__dup_literals.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - sat/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = false

----- stderr -----

Interactions
  Total                8_280
    Depth              3_589
    Breadth                2
  Annihilate           4_213
  Commute                 78
  Copy                   976
  Erase                1_082
  Expand                 669
  Call                   853
  Branch                 409

Memory
  Heap                 3_824 B
  Allocated          175_408 B
  Freed              175_408 B

[Performance...]
