tests/snapshots/minimal/tests__dup_literals_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total                8_297
  Annihilate           4_224
  Commute                 78
  Copy                   970
  Erase                1_090
  Expand                 673
  Call                   853
  Branch                 409

Parallelism
  Depth                3_588
  Breadth                  2
  Speedup                 36 cB

Memory
  Heap                 3_904 B
  Allocated          175_664 B
  Freed              175_664 B

[Performance...]
