tests/snapshots/minimal/tests__empty_clause_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total                3_702
    Depth              1_896
    Breadth                1
  Annihilate           1_817
  Commute                 34
  Copy                   525
  Erase                  491
  Expand                 267
  Call                   390
  Branch                 178

Memory
  Heap                 2_928 B
  Allocated           77_504 B
  Freed               77_504 B

[Performance...]
