tests/snapshots/minimal/tests__empty_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total                3_793
    Depth              1_786
    Breadth                2
  Annihilate           1_930
  Commute                 25
  Copy                   461
  Erase                  490
  Expand                 300
  Call                   410
  Branch                 177

Memory
  Heap                 3_088 B
  Allocated           80_432 B
  Freed               80_432 B

[Performance...]
