tests/snapshots/minimal/tests__equality_forced.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true

----- stderr -----

Interactions
  Total               11_091
    Depth              5_192
    Breadth                2
  Annihilate           5_694
  Commute                111
  Copy                 1_318
  Erase                1_451
  Expand                 883
  Call                 1_084
  Branch                 550

Memory
  Heap                 3_936 B
  Allocated          235_920 B
  Freed              235_920 B

[Performance...]
