tests/snapshots/minimal/tests__equality_forced_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total               11_211
  Annihilate           5_738
  Commute                120
  Copy                 1_342
  Erase                1_478
  Expand                 889
  Call                 1_089
  Branch                 555

Parallelism
  Depth                5_204
  Breadth                  2
  Speedup                 33 cB

Memory
  Heap                 4_208 B
  Allocated          238_160 B
  Freed              238_160 B

[Performance...]
