tests/snapshots/minimal/tests__many_models.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true

----- stderr -----

Interactions
  Total                7_490
    Depth              3_226
    Breadth                2
  Annihilate           3_793
  Commute                 65
  Copy                   885
  Erase                  983
  Expand                 609
  Call                   784
  Branch                 371

Memory
  Heap                 3_776 B
  Allocated          158_160 B
  Freed              158_160 B

[Performance...]
