tests/snapshots/minimal/tests__many_models_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total                7_490
    Depth              3_226
    Breadth                2
  Annihilate           3_793
  Commute                 65
  Copy                   885
  Erase                  983
  Expand                 609
  Call                   784
  Branch                 371

Memory
  Heap                 3_776 B
  Allocated          158_160 B
  Freed              158_160 B

[Performance...]
