tests/snapshots/minimal/tests__pure_literals.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true

----- stderr -----

Interactions
  Total               10_468
    Depth              4_526
    Breadth                2
  Annihilate           5_360
  Commute                 99
  Copy                 1_222
  Erase                1_388
  Expand                 847
  Call                 1_029
  Branch                 523

Memory
  Heap                 4_496 B
  Allocated          221_952 B
  Freed              221_952 B

[Performance...]
